# latitude

./: .gitignore  Cargo.toml  README.md  init-ultravnc.ps1  latitude.example.json
docs/: RUNNING_WITH_CLOUDFLARE.md
migrations/: 20260626000000_sqlite_catalog.sql  20260714000000_worktrees.sql
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/plugins/: withCleartextTraffic.js
mobile/scripts/: build-android-apk.ps1
mobile/src/: AppContent.tsx  api.ts  constants.ts  navigationTypes.ts  storage.ts  theme.tsx  types.ts
mobile/src/components/: Shell.tsx  ui.tsx
mobile/src/screens/: ConnectScreen.tsx  GitCommitScreen.tsx  GitHistoryScreen.tsx  HomeScreen.tsx  ProjectRoute.tsx  ProjectScreen.tsx  RootDesktopScreen.tsx  RootTerminalScreen.tsx  ServersScreen.tsx
mobile/src/utils/: errors.ts  headers.ts
scripts/: start-latitude.ps1
sites/mock/: about.html  app.js  index.html  status.json  styles.css
skills/latitude-command-api/: SKILL.md
skills/latitude-command-api/agents/: openai.yaml
src/: cli.rs  config.rs  desktop.rs  device.rs  main.rs  server.rs  state.rs  storage.rs  terminal.rs
src/server/: assets.rs  auth.rs  command.rs  constants.rs  desktop_api.rs  files_api.rs  git.rs  html.rs  page.rs  paths.rs  presentation.rs  public.rs  render.rs  response.rs  t3code.rs  terminal_api.rs  tests.rs
src/server/assets/: auth.css  common-theme.css  desktop-viewer.css  desktop-viewer.js  diff-viewer.css  diff-viewer.js  file-viewer.css  file-viewer.js  page.css  project-home.css  project-home.js  terminal-viewer.css  terminal-viewer.js  theme-bootstrap.js  theme-toggle.js
src/server/git/: actions.rs  command.rs  diff.rs  discovery.rs  public.rs  types.rs
src/server/public/: api.rs  models.rs  serve.rs
tools/ultravnc/: README.md
(+24 files in other folders)
