[package]
name = "latitude"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
hmac = "0.12"
hostname = "0.4"
futures-util = "0.3"
maud = "0.27.0"
mime_guess = "2.0"
percent-encoding = "2.3"
portable-pty = "0.9"
pulldown-cmark = "0.13"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
syntect = "5.3.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
two-face = "0.5.1"
url = "2.5"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi"] }
